[MODINVOICE-613]. Add pending payments to close-to-open strategy